2013-08-05  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: Revert change from 2013-07-29. The length of the
	concatenated 2 lines was correct.

2013-08-05  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/salt.c: random() max value is 2^31-1 (same as RAND_MAX
	on GNU). As it is not clear whether on some systems the max value
	can exceed this number and whether some systems have max values
	which would be lower, we take this into account when defining the
	salt size and number of rounds for SHA encrypted passwords. Higher
	values are favored.

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: With getopt, '-' does not need to be the last
	option, but it is recommended for portability.
	Closes https://bugs.launchpad.net/bugs/1100775

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS: Add NEWS entries.

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/da.po: Fix translation (--home became --home-dir).
	* man/po/de.po: Likewise.
	* man/po/fr.po: Likewise.
	* man/po/pl.po: Likewise.
	* man/po/ru.po: Likewise.
	* man/po/sv.po: Likewise.

2013-08-04  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c (merge_group_entries): Do not allocate more than
	necessary (sizeof char* instead of char).
	Thanks for Tomáš Mráz (alioth#313962)
	* lib/groupio.c (merge_group_entries): Document that new_members
	is correctly NULL terminated. (alioth:#313940)

2013-08-03  Nicolas François  <nicolas.francois@centraliens.net>

	* Changelog: Update documentation of 2013-07-28  mancha entry.
	* lib/prototypes.h, lib/encrypt.c: Update splint marker,
	pw_encrypt can return NULL.
	* lib/encrypt.c: Fix outdated statement on GNU crypt.
	* src/chgpasswd.c: Improve diagnostic to user when pw_encrypt
	fails and use fail_exit() instead of exit().
	* src/chpasswd.c: Likewise.
	* src/newusers.c: Likewise.
	* src/passwd.c: Likewise when new password is encrypted.